--- a/task-5.html
+++ b/task-5.html
@@ -62,6 +62,9 @@
         <tr>
             <td><input type="checkbox">Hereby I declare all the given deetails are true</td>
         </tr>
+        <tr>
+            <td><input type="submit"></td>
+        </tr>
     </table>
 </body>
 </html>
